# vivid-frame

./: .gitignore  README.md  pyproject.toml
vivid_frame/: cli.py  image_to_video.py
